force-app/main/default/objects/BGBK__Transaction__c/BGBK__Transaction__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <label>Transaction</label>
    <nameField>
        <displayFormat>T-{000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>