force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Account__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional - used to add a related account.</description>
    <inlineHelpText>Customer, Employee, Vendor exchanging the goods or money</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions as Account</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>