force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Balance_Amount__c</fullName>
    <description>Deprecated.</description>
    <formula>BGBK__Total_Amount__c + BGBK__Total_Related_Transactions_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>