force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Description__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Description__c</fullName>
    <description>Deprecated.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>