force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Original_Transaction__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Original_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated.</description>
    <label>Original Transaction</label>
    <referenceTo>BGBK__Transaction__c</referenceTo>
    <relationshipLabel>Related Transactions</relationshipLabel>
    <relationshipName>SubTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>