force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Related_To__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Related_To__c</fullName>
    <description>Parent ID:Parent API Name (e.g. 00abc123blabla:MUSW__Permit2__c)</description>
    <label>Related To</label>
    <length>60</length>
    <type>Text</type>
</CustomField>