force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Total_Amount__c</fullName>
    <description>Deprecated.</description>
    <label>Amount</label>
    <summarizedField>BGBK__Item__c.BGBK__Amount__c</summarizedField>
    <summaryForeignKey>BGBK__Item__c.BGBK__Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>