force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Total_Related_Transactions_Amount__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Total_Related_Transactions_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Deprecated.</description>
    <label>Total Related Transactions Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>