force-app/main/default/objects/BGBK__Transaction__c/validationRules/BGBK__Cash_Type_Not_Permitted.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBK__Cash_Type_Not_Permitted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL( BGBK__Cash_Type__c, &apos;&apos;)),  NOT(ISPICKVAL(BGBK__Type__c, &apos;Cash&apos;)))</errorConditionFormula>
    <errorMessage>Cash Type can only be specified for Cash Transactions</errorMessage>
</ValidationRule>